--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "swiper": "^5.4.2",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^2.6.7",
-    "vue-router": "^3.2.0"
+    "vue-router": "^3.2.0",
+    "vuex": "^3.4.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.4.0",
